# ST-0

./: CMakeLists.txt  README.md
include/: alg.h
src/: CMakeLists.txt  alg.cpp  alg.h  main.cpp
test/: CMakeLists.txt  tests.cpp
